[package]
name = "sack"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "allocation"
harness = false
